objects/Activity.object
<CustomObject>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal this task is meant to address</description>
        <inlineHelpText>Goal this task is meant to address</inlineHelpText>
        <label>Goal</label>
        <referenceTo>HealthCloudGA__CarePlanGoal__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Problem this task is mean to address</description>
        <inlineHelpText>Problem this task is mean to address</inlineHelpText>
        <label>Problem</label>
        <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Counselling</fullName>
                </value>
                <value>
                    <fullName>Vaccination</fullName>
                </value>
                <value>
                    <fullName>Exercise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Conditions_Status__c</fullName>
        <label>Condition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluated - No Risk</fullName>
                </value>
                <value>
                    <fullName>Asymptomatic</fullName>
                </value>
                <value>
                    <fullName>Asymptomatic - Declined to Participate</fullName>
                </value>
                <value>
                    <fullName>Symptomatic</fullName>
                </value>
                <value>
                    <fullName>Symptomatic - Declined to Participate</fullName>
                </value>
                <value>
                    <fullName>Cured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Contract_Tracing_Status__c</fullName>
        <label>Contract Tracing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Monitored_at_Home__c</fullName>
        <label>Monitored at Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaskType__c</fullName>
        <label>TaskType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uncategorized</fullName>
                    <default>true</default>
                    <label>Uncategorized</label>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Testing_Status__c</fullName>
        <label>Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Testing Recommended</fullName>
                </value>
                <value>
                    <fullName>Test Scheduled</fullName>
                </value>
                <value>
                    <fullName>Test Results Pending</fullName>
                </value>
                <value>
                    <fullName>Negative Test</fullName>
                </value>
                <value>
                    <fullName>Positive Test</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__ActionApiName__c</fullName>
        <description>The API name of the automation to start.  This value is required for the Flow action type.</description>
        <inlineHelpText>The API name of the automation to start. This value is required for the Flow action type.</inlineHelpText>
        <label>Action API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__ActionCategory__c</fullName>
        <description>The action category.  To display the task in the Workplace Command Center Operations Feed, specify a value for this field.</description>
        <inlineHelpText>The action category.  To display the task in the Workplace Command Center Operations Feed, specify a value for this field.</inlineHelpText>
        <label>Action Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Employee Wellness Alert</fullName>
                </value>
                <value>
                    <fullName>Employee Wellness Warning</fullName>
                </value>
                <value>
                    <fullName>Employee Wellness Information</fullName>
                </value>
                <value>
                    <fullName>Employee Wellness Action</fullName>
                </value>
                <value>
                    <fullName>Location Alert</fullName>
                </value>
                <value>
                    <fullName>Location Warning</fullName>
                </value>
                <value>
                    <fullName>Location Information</fullName>
                </value>
                <value>
                    <fullName>Location Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__ActionInputVariables__c</fullName>
        <description>A JSON formatted string of variables. These are used for the Flow action type to specify input variables.</description>
        <inlineHelpText>A JSON formatted string of variables. These are used for the Flow action type to specify input variables.</inlineHelpText>
        <label>Action Input Variables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__ActionType__c</fullName>
        <description>The type of action being performed by this task if it has an automated action.</description>
        <inlineHelpText>The type of action being performed by this task if it has an automated action.</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__ActionUrl__c</fullName>
        <description>An absolute or relative URL to a page or record. The URL includes any required parameters. Relative URLs are relative to the Salesforce instance.</description>
        <inlineHelpText>An absolute or relative URL to a page or record. The URL includes any required parameters. Relative URLs are relative to the Salesforce instance.</inlineHelpText>
        <label>Action URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Location that this Task is related to.</description>
        <inlineHelpText>A reference to the Location that this Task is related to.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Operations Tasks</relationshipLabel>
        <relationshipName>OperationsTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__TransitionPlanTask__c</fullName>
        <description>The transition plan task that this task was generated from</description>
        <label>Transition Plan Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__TransitionPlanTemplateTaskId__c</fullName>
        <description>The SF Id of the Transition Plan Template Task that this Task was generated from</description>
        <label>Transition Plan Template Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__UseTaskLabelsInChecklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the onboarding checklist of tasks, show the name and description set on the task record instead of the name and description set on the onboarding task record.</description>
        <inlineHelpText>In the onboarding checklist of tasks, show the name and description set on the task record instead of the name and description set on the onboarding task record.</inlineHelpText>
        <label>Use Task Labels in Onboarding Checklist</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>